Mon Nov 18 18:58:26 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added support for setting FOUNDER mode on channel with
	  specific public key which can be set with CMODE command.
	  Updated protocol specs and implemented in client and server.

	* Fixed the Irssi SILC client to correctly shutdown the client
	  library to avoid memory leaks.  Affected files are
	  irssi/src/silc/core/silc-core.c and silc-servers.c.

	* Deprecated the No Reply flag in SKE protocol and introduced
	  "IV Included" flag which can be used to indicate that the IV
	  is included in the ciphertext.  This makes it possible to use
	  SILC on unreliable transport, such as UDP which may cause
	  packet reordering and losses.  Updated protocol specs, did
	  not implement yet.

Sun Nov 17 15:50:57 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the MPI implementation of silc_mp_sizeinbase to return
	  < 32 bit values in correct size.  Affected file is
	  lib/silcmath/mp_mpi.c.

Sat Nov 16 13:14:45 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the KE Start Payload parsing to check that mandatory
	  fields are present.  Affected file lib/silcske/payload.c.

	* Fixed compilation warnigs in Irssi SILC Client.  Affected
	  files are irssi/src/silc/core/silc-query.c. client_ops.c.

Thu Nov 14 19:33:28 CET 2002  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* Print "nick now appears as newnick" and update Irssi's nicklist
	  when you change your nick to "nick". Closes #62

	* Never format your own nick. Closes #63

Thu Nov 14 09:44:54 CET 2002  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* SILC_UMODE_GONE changes are now propagated correctly to the
	  Irssi client. Closes #54
	
Tue Nov 12 19:42:18 CET 2002  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* Fixed example in /HELP KEY

	* Added expando $j which expands to current SILC Client version

Tue Nov 12 19:46:39 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed public key decoding in crypto library.
